# GameEngine_VulkanCPP

./: .gitignore  CMakeLists.txt  GetDXC.ps1  Primal.sln  README.md  algorith_test.txt  premake5.lua
ContentTools/: CMakeLists.txt  ContentTools.cpp  ContentTools.exp  ContentTools.lib  ContentTools.vcxproj  ContentTools.vcxproj.filters  FbxImporter.cpp  FbxImporter.h  Geometry.cpp  Geometry.h  NormalMapIdentification.cpp  ObjImporter.cpp  ObjImporter.h  PrimitiveMesh.cpp  PrimitiveMesh.h  TextureImporter.cpp  ToolsCommon.h
ContentTools/TemplateShader/: PBR_Template_Shader_v1.h
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  packages.config
Engine/Common/: CommonHeaders.h  Id.h  PrimitiveTypes.h
Engine/Components/: ComponentsCommon.h  Entity.cpp  Entity.h  PythonAPI.h  Script.cpp  Script.h  Transform.cpp  Transform.h
Engine/Content/: ContentLoader.h  ContentLoaderWin32.cpp  ContentToEngine.cpp  ContentToEngine.h  tiny_obj_loader.h
Engine/Core/: EngineWin32.cpp  MainWin32.cpp
Engine/EngineAPI/: Camera.h  GameEntity.h  Input.h  Light.h  ScriptComponent.h  TransformComponent.h
Engine/Graphics/: GraphicsPlatform.cpp  GraphicsPlatform.h  GraphicsPlatformInterface.h  Renderer.cpp  Renderer.h
Engine/Graphics/Direct3D12/: D3D12Camera.cpp  D3D12Camera.h  D3D12CommonHeaders.h  D3D12Content.cpp  D3D12Content.h  D3D12Core.cpp  D3D12Core.h  D3D12GPass.cpp  D3D12GPass.h  D3D12Helpers.cpp  D3D12Helpers.h  D3D12Interface.cpp  D3D12Interface.h  D3D12Light.cpp  D3D12Light.h  D3D12LightCulling.cpp  D3D12LightCulling.h  D3D12PostProcess.cpp  D3D12PostProcess.h  D3D12Resources.cpp  D3D12Resources.h  D3D12Shaders.cpp  D3D12Shaders.h  D3D12Surface.cpp  D3D12Surface.h  D3D12Upload.cpp  D3D12Upload.h
Engine/Graphics/Direct3D12/Shaders/: Common.hlsli  CommonConstants.hlsli  CommonFunctions.hlsli  CommonTypes.hlsli  CullLights.hlsl  FillColor.hlsl  Fractals.hlsli  FullScreenTriangle.hlsl  GridFrustums.hlsl  PostProcess.hlsl  SharedTypes.h
Engine/Graphics/Utilities/: BVH.hpp
Engine/Graphics/Vulkan/: VulkanCamera.cpp  VulkanCamera.h  VulkanCommandBuffer.cpp  VulkanCommonHeaders.h  VulkanCompute.cpp  VulkanCompute.h  VulkanContent.cpp  VulkanContent.h  VulkanCore.cpp  VulkanCore.h  VulkanData.cpp  VulkanData.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanGBuffer.cpp  VulkanGBuffer.h  VulkanHelpers.cpp  VulkanHelpers.h  VulkanInterface.cpp  VulkanLight.cpp  VulkanLight.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanResources.cpp  VulkanResources.h  VulkanShader.cpp  VulkanShader.h  VulkanSurface.cpp  VulkanSurface.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUtility.cpp  VulkanUtility.h
Engine/Graphics/Vulkan/Shaders/: Common.h  CommonFunction.glsli  CommonTypes.glsli  ShaderTypes.h  ShadersCommonHeaders.h  compileShaders.bat  compileShaders2.bat  composition.frag  culling_light.comp  floor.frag  floor.frag.glsl  floor.vert  floor.vert.glsl  gbuffer.frag  gbuffer.vert  shadowmapping.frag.glsl  shadowmapping.vert  shadowmapping.vert.glsl  ssao.frag  test.comp  test01.frag  test01.frag.glsl  test01.vert  test01.vert.glsl
Engine/Input/: Input.cpp  Input.h  InputWin32.cpp  InputWin32.h
Engine/Platform/: IncludeWindowCPP.h  Platform.h  PlatformWin32.cpp  Window.cpp
Engine/Python_Scripts/: compileShaders.py
Engine/Simulation/: SimulationCommonHeaders.h
Engine/Simulation/lib/checked/: PhysXPvdSDK_static_64.lib
Engine/Simulation/lib/profile/: PhysXCommon_64.lib  PhysXPvdSDK_static_64.lib
Engine/Utilities/: FreeList.h  Hash.h  IOStream.h  Macros.h  Math.h  MathTypes.h  ThreadPool.hpp  Vector.h
EngineDLL/: CMakeLists.txt  DllMain.cpp  EngineAPI.cpp  EngineDLL.exp  EngineDLL.lib  EngineDLL.vcxproj  EngineDLL.vcxproj.filters  EntityAPI.cpp
EngineTest/: CMakeLists.txt  EngineTest.vcxproj  EngineTest.vcxproj.filters  Lights.cpp  Main.cpp  PythonScript.h  RenderItem.cpp  Scripts.cpp  ShaderCompilation.cpp  ShaderCompilation.h  Test.h  TestEntityComponents.h  TestRenderer.cpp  TestRenderer.h  TestShader.hlsl  TestWindow.h  model.model  packages.config
EngineTest/assets/kms/sphere/shaders/: Common.h  CommonConstant.glsli  CommonFunction.glsli  CommonTypes.glsli  sphere.frag
EngineTest/assets/kms/sponza/shaders/: 16___Default.frag  CommonTypes.glsli  Material__47.frag  arch.vert  vase_round.frag
EngineTest/assets/materials/: test_material.kmt
EngineTest/assets/shaders/: Builtin.MaterialShader.frag.glsl  Builtin.MaterialShader.vert.glsl
PrimalEditor/: App.xaml  EnginePathDialog.xaml  EnginePathDialog.xaml.cs  MainWindow.xaml.cs  PrimalEditor - Backup.csproj  PrimalEditor.csproj
PrimalEditor/Common/: Converters.cs  Helper.cs  RelayCommand.cs  ViewModelBase.cs
PrimalEditor/Components/: Component.cs  ComponentFactory.cs  GameEntity.cs  Transform.cs
PrimalEditor/Content/: Asset.cs  AssetRegistry.cs  ContentWatcher.cs  Geometry.cs  PrimitiveMeshDislog.xaml  PrimitiveMeshDislog.xaml.cs  Texture.cs
PrimalEditor/Dictionaries/: ControlTemplates.xaml  ControlTemplates.xaml.cs  (+1 more)
VSCodeSnippets/: VkAttachmentDescription.snippet  VkAttachmentReference.snippet  VkDescriptorBufferInfo.snippet  VkDescriptorImageInfo.snippet  VkDescriptorPoolCreateInfo.snippet  VkDescriptorPoolSize.snippet  VkDescriptorSetAllocateInfo.snippet  VkDescriptorSetLayoutBinding.snippet  VkDescriptorSetLayoutCreateInfo.snippet  VkFramebufferCreateInfo.snippet  VkGraphicsPipelineCreateInfo.snippet  VkImageCreateInfo.snippet  VkImageViewCreateInfo.snippet  VkPipelineColorBlendAttachmentState.snippet  VkPipelineColorBlendStateCreateInfo.snippet  VkPipelineDepthStencilStateCreateInfo.snippet  VkPipelineDynamicStateCreateInfo.snippet  VkPipelineInputAssemblyStateCreateInfo.snippet  VkPipelineLayoutCreateInfo.snippet  VkPipelineMultisampleStateCreateInfo.snippet  VkPipelineRasterizationStateCreateInfo.snippet  VkPipelineVertexInputStateCreateInfo.snippet  VkPipelineViewportStateCreateInfo.snippet  VkRenderpassCreateInfo.snippet  VkSamplerCreateInfo.snippet  VkSubpassDependency.snippet  VkSubpassDescription.snippet  VkWriteDescriptorSet.snippet
(+94 files in other folders)
